<resources>
    <string name="app_name">GameDatabase</string>
    <string name="name">Name</string>
    <string name="year_released">Year released</string>
    <string name="min_players">Min players</string>
    <string name="max_players">Max players</string>
    <string name="action">Action</string>
    <string name="sports">Sports</string>
    <string name="simulation">Simulation</string>
    <string name="rpg">RPG</string>
    <string name="strategy">Strategy</string>
    <string name="view_all">View All</string>
    <string name="add">Add</string>
</resources>