<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberSigned"
        android:importantForAutofill="no"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/year_released"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etMinPlayers"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:inputType="numberSigned"
        android:importantForAutofill="no"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/min_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYear" />

    <EditText
        android:id="@+id/etMaxPlayers"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:inputType="numberSigned"
        android:importantForAutofill="no"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/max_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etYear" />

        <RadioGroup
            android:id="@+id/rgGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMinPlayers">

            <RadioButton
                android:id="@+id/rbAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action" />

            <RadioButton
                android:id="@+id/rbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <RadioButton
                android:id="@+id/rbSimulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simulation" />

            <RadioButton
                android:id="@+id/rbRpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rpg" />

        </RadioGroup>

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_all"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGenres" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@id/btnViewAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGenres" />

    <ListView
        android:id="@+id/lvGameList"
        android:layout_width="409dp"
        android:layout_height="441dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewAll" />

</androidx.constraintlayout.widget.ConstraintLayout>